--- a/mainstyle.css
+++ b/mainstyle.css
@@ -1,6 +1,16 @@
 body {
-    background-color: rgb(0, 0, 80);
+    background-color: rgb(17, 24, 65);
+}
+p {
+    color: rgb(126, 158, 240);
+    font-family: 'Courier New', Courier, monospace;
+}
+.container {
+    display: inline-grid;
+    padding: 10px;
 }
 .pfp_wrap {
-    background-color: rgb(95, 122, 182);
+    background-color: rgb(33, 46, 113);
+    padding: 10px;
+    border-radius: 15%;
 }
