--- a/mainstyle.css
+++ b/mainstyle.css
@@ -5,22 +5,31 @@ p {
     color: rgb(126, 158, 240);
     font-family: 'Courier New', Courier, monospace;
 }
+h1 {
+    text-align: center;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 50px;
+    color: rgb(61, 82, 175);
+}
 .container {
-    display: inline;
+    display: block;
     padding: 10px;
     float:inline-start;
+    
 }
 .pfp_wrap {
     background-color: rgb(33, 46, 113);
-    padding: 10px;
+    padding: 20px;
     border-radius: 15%;
     float: left;
 }
-.summary {
+.buttons {
     background-color: rgb(33, 46, 113);
-    border-radius: 10px;
+    border-radius: 20px;
     margin-left: 20px;
-    padding: 10px;
+    padding: 10px 20px 10px 20px;
     float: left;
-    
+}
+.buttons p {
+    font-size: x-large;
 }
