--- a/mainstyle.css
+++ b/mainstyle.css
@@ -13,7 +13,7 @@ h1 {
 }
 .container {
     display: block;
-    padding: 10px;
+    padding: 10px 10px 10px 100px;
     float:inline-start;
     
 }
@@ -24,12 +24,23 @@ h1 {
     float: left;
 }
 .buttons {
-    background-color: rgb(33, 46, 113);
-    border-radius: 20px;
+    /*background-color: rgb(33, 46, 113);*/
+    /*border-radius: 20px;*/
+    display: grid;
     margin-left: 20px;
-    padding: 10px 20px 10px 20px;
+    padding: 0px 20px 10px 20px;
     float: left;
 }
-.buttons p {
+.buttons a {
     font-size: x-large;
+    padding: 15px 20px 15px 20px;
+    background-color: rgb(33, 46, 113);
+    border-radius: 20px;
+    color: rgb(126, 158, 240);
+    font-family: 'Courier New', Courier, monospace;
+    margin: 15px 10px 15px 10px;
+    text-decoration: none;
+}
+.buttons a:hover{
+    background-color: rgb(72, 95, 211);
 }
