--- a/mainstyle.css
+++ b/mainstyle.css
@@ -5,11 +5,18 @@ p {
     color: rgb(126, 158, 240);
     font-family: 'Courier New', Courier, monospace;
 }
+a {
+    color: rgb(126, 158, 240);
+    font-family: 'Courier New', Courier, monospace;
+}
 h1 {
     text-align: center;
     font-family: 'Courier New', Courier, monospace;
     font-size: 50px;
     color: rgb(61, 82, 175);
+}
+.banner {
+    display: inline;
 }
 .container {
     display: block;
@@ -44,3 +51,57 @@ h1 {
 .buttons a:hover{
     background-color: rgb(72, 95, 211);
 }
+
+/* MENU BAR CSS */
+.menu_icon {
+    height: 50px;
+    width: 50px;
+    background-color: rgb(126, 158, 240);
+    display: block;
+    margin: 2px;
+    padding-top: 10px;
+}
+.menu_icon:hover {
+    background-color: rgb(72, 95, 211);
+}
+.menu_icon div {
+    margin-top: 5px;
+    height: 7px;
+    width: 40px;
+    margin: 5px;
+    display: grid;
+    background-color: black;
+}
+.menu {
+    height: 100%;
+    width: 0; /* starts at 0 width, opens on menu click */
+    position: fixed; 
+    z-index: 1;
+    top: 0;
+    left: 0;
+    overflow-x: hidden; /* Disable horizontal scroll */
+    transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
+}
+.menu a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    display: block;
+    transition: 0.3s;
+    background-color: rgb(33, 46, 113);
+    flood-opacity: 20%;
+  }
+.menu a:hover {
+    color: rgb(72, 95, 211);
+}
+.menu .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
+  }
+  #main {
+    transition: margin-left .5s;
+    padding: 20px;
+  }
